--- a/settings.json.template
+++ b/settings.json.template
@@ -1,5 +1,6 @@
 {
 	"README": "Copy this file to settings.json and replace with your bot token and response",
 	"bot_token": "xoxb-fooooooo-fooooooo",
-	"response": "xxxx"
+	"good-response": "xxxx"
+	"evil-response": "xxxx"
 }
